     resets local_opsidata after servicecall
  * osparser: CreateAndProcessScript: resets local_opsidata before script
  * osparser: doAktionen: Statement: 'opsiservicecall /preloginservice' (without sektion) allowed
  * oswebservice: sendLog: shrinking temporary disabled until size can be asked via service call

-- Detlef Oertel <d.oertel@uib.de>  Tue, 06 Dec 2016:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.10) stable; urgency=low

  * osfuncwin: RunCommandAndCaptureOut: transfer exitcode if process could not start
  * osparser: execShellCall: new parameter FatalOnFail : boolean = true
  * osparser: execShellCall: returns exitcode on fail
  * osparser: evaluateBoolean: FileExists* : call execshellCall with FatalOnFail=false

-- Detlef Oertel <d.oertel@uib.de>  Wed, 09 Nov 2016:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.9) stable; urgency=low

  * osregistry: TuibRegistry.ReadEntry: use RegQueryValueExW on trdString, trdExpandString
  * osregistry: fix encoding in deletekey

-- Detlef Oertel <d.oertel@uib.de>  Fri, 04 Nov 2016:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.8) stable; urgency=low

  * osconf: global bool variable readconfig_done which is set by readconfig to true
  * osparser: CreateAndProcessScript: do not call readconfig if  readconfig_done
  * should fix: uib#2016101810000104 — Installation per WAN schlägt auf zufälligen Clients fehl

-- Detlef Oertel <d.oertel@uib.de>  Fri, 28 Oct 2016:15:00:00 +0200


opsi-winst/opsi-script (4.11.6.7) stable; urgency=low

  * new unit oskeyboard
  * linkfolder knows now parameter shortcut for key like Shift-Alt-O

-- Detlef Oertel <d.oertel@uib.de>  Fri, 21 Oct 2016:15:00:00 +0200

opsi-winst/opsi-script (4.11.6.6) stable; urgency=low

  * osmain: GetParameter: log error if readconfig failed
  * osparser: CreateAndProcessScript: log error if readconfig failed
  * osparser: CreateAndProcessScript: backup depot path and restor if rad config failed