@@ -24,7 +24,7 @@
       <BuildNr Value="11"/>
       <StringTable Comments="Compiled with Lazarus 1.6 / FPC 3.0" CompanyName="uib gmbh (uib.de / opsi.org)" FileDescription="opsi-script" InternalName="winst32.exe" LegalCopyright="AGPL v3" LegalTrademarks="opsi / opsi.org / open pc server integration" OriginalFilename="winst32.exe" ProductName="opsi-script" ProductVersion="4.0.7"/>
     </VersionInfo>
-    <BuildModes Count="3" Active="Release">
+    <BuildModes Count="3">
       <Item1 Name="default" Default="True"/>
       <Item2 Name="Debug">
         <CompilerOptions>
@@ -148,9 +148,10 @@
       <Unit0>
         <Filename Value="winst.lpr"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
-        <TopLine Value="7"/>
-        <CursorPos X="39" Y="12"/>
+        <TopLine Value="23"/>
+        <CursorPos X="16" Y="37"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -409,7 +410,7 @@
       <Unit28>
         <Filename Value="changelog.txt"/>
         <TopLine Value="10"/>
-        <CursorPos X="81" Y="24"/>
+        <CursorPos X="59" Y="25"/>
         <UsageCount Value="100"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
@@ -495,7 +496,7 @@
       <Unit38>
         <Filename Value="osfunc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="798"/>
         <CursorPos X="11" Y="824"/>
         <ExtraEditorCount Value="1"/>
@@ -512,10 +513,11 @@
       <Unit39>
         <Filename Value="osfuncwin2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="11"/>
-        <CursorPos X="3" Y="37"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="2267"/>
+        <CursorPos X="74" Y="2290"/>
         <UsageCount Value="209"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit39>
       <Unit40>
@@ -530,10 +532,9 @@
       <Unit41>
         <Filename Value="osparser.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="7"/>
-        <TopLine Value="6158"/>
-        <CursorPos X="7" Y="6183"/>
+        <TopLine Value="17514"/>
+        <CursorPos X="17" Y="17539"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -568,7 +569,7 @@
       <Unit43>
         <Filename Value="osfuncwin.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="116"/>
         <CursorPos X="33" Y="116"/>
         <ExtraEditorCount Value="1"/>
@@ -594,9 +595,11 @@
       <Unit45>
         <Filename Value="oscalc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="-1"/>
-        <CursorPos X="45" Y="125"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="103"/>
+        <CursorPos X="101" Y="111"/>
         <UsageCount Value="200"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit45>
       <Unit46>
@@ -955,7 +958,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="4"/>
         <CursorPos X="40" Y="32"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit89>
@@ -972,7 +975,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit91>
       <Unit92>
@@ -982,7 +985,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit92>
       <Unit93>
@@ -992,7 +995,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit93>
       <Unit94>
@@ -1002,7 +1005,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit94>
       <Unit95>
@@ -1011,17 +1014,17 @@
         <EditorIndex Value="1"/>
         <TopLine Value="1518"/>
         <CursorPos X="12" Y="1522"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit95>
       <Unit96>
         <Filename Value="..\common\oswebservice.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="3547"/>
         <CursorPos X="30" Y="3571"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit96>
@@ -1032,7 +1035,7 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit97>
       <Unit98>
@@ -1040,7 +1043,7 @@
         <EditorIndex Value="3"/>
         <TopLine Value="1923"/>
         <CursorPos X="3" Y="1949"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="14"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit98>
@@ -1051,127 +1054,130 @@
         <WindowIndex Value="-1"/>
         <TopLine Value="-1"/>
         <CursorPos X="-1" Y="-1"/>
-        <UsageCount Value="22"/>
+        <UsageCount Value="26"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit99>
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="..\common\oswebservice.pas"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7019" TopLine="6998"/>
       </Position1>
       <Position2>
-        <Filename Value="..\common\oslog.pas"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7021" TopLine="6998"/>
       </Position2>
       <Position3>
         <Filename Value="osparser.pas"/>
-        <Caret Line="17835" Column="27" TopLine="17811"/>
+        <Caret Line="7022" TopLine="6998"/>
       </Position3>
       <Position4>
-        <Filename Value="..\common\oswebservice.pas"/>
-        <Caret Line="3571" Column="14" TopLine="3547"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7023" TopLine="6998"/>
       </Position4>
       <Position5>
-        <Filename Value="winst.lpr"/>
-        <Caret Line="14" Column="22" TopLine="7"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7024" TopLine="6998"/>
       </Position5>
       <Position6>
-        <Filename Value="..\external_libraries\indy\Lib\System\IdGlobal.pas"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7025" TopLine="6998"/>
       </Position6>
       <Position7>
-        <Filename Value="..\external_libraries\indy\Lib\System\IdStream.pas"/>
-        <Caret Line="25" Column="33"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7028" TopLine="6998"/>
       </Position7>
       <Position8>
-        <Filename Value="winst.lpr"/>
-        <Caret Line="33" Column="3" TopLine="7"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7029" TopLine="6998"/>
       </Position8>
       <Position9>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="781" Column="16" TopLine="751"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7030" TopLine="6998"/>
       </Position9>
       <Position10>
-        <Filename Value="osmain.pas"/>
-        <Caret Line="1182" Column="25" TopLine="1157"/>
+        <Filename Value="osparser.pas"/>
+        <Caret Line="7033" TopLine="6998"/>
       </Position10>
       <Position11>
         <Filename Value="osparser.pas"/>
-        <Caret Line="16518" Column="25" TopLine="16493"/>
+        <Caret Line="7039" TopLine="6998"/>
       </Position11>
       <Position12>
         <Filename Value="osparser.pas"/>
-        <Caret Line="18533" Column="14" TopLine="18495"/>
+        <Caret Line="7047" Column="17" TopLine="6999"/>
       </Position12>
       <Position13>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="616" Column="8" TopLine="590"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="37" Column="3" TopLine="11"/>
       </Position13>
       <Position14>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6541" Column="42" TopLine="6508"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2269" Column="67" TopLine="2218"/>
       </Position14>
       <Position15>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6082" Column="17" TopLine="6057"/>
+        <Caret Line="7047" Column="17" TopLine="6999"/>
       </Position15>
       <Position16>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6185" Column="34" TopLine="6158"/>
+        <Caret Line="13205" Column="38" TopLine="13179"/>
       </Position16>
       <Position17>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6637" Column="15" TopLine="6612"/>
+        <Caret Line="13220" Column="11" TopLine="13179"/>
       </Position17>
       <Position18>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6641" Column="14" TopLine="6612"/>
+        <Caret Line="18980" Column="13" TopLine="18956"/>
       </Position18>
       <Position19>
         <Filename Value="osparser.pas"/>
-        <Caret Line="9650" Column="17" TopLine="9625"/>
+        <Caret Line="13219" Column="29" TopLine="13191"/>
       </Position19>
       <Position20>
         <Filename Value="osparser.pas"/>
-        <Caret Line="18429" Column="25" TopLine="18403"/>
+        <Caret Line="18984" Column="5" TopLine="18938"/>
       </Position20>
       <Position21>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6183" Column="7" TopLine="6158"/>
+        <Caret Line="13441" Column="39" TopLine="13416"/>
       </Position21>
       <Position22>
         <Filename Value="osparser.pas"/>
-        <Caret Line="17843" Column="26" TopLine="17814"/>
+        <Caret Line="13216" Column="10" TopLine="13191"/>
       </Position22>
       <Position23>
         <Filename Value="osparser.pas"/>
-        <Caret Line="6185" Column="34" TopLine="6158"/>
+        <Caret Line="156" Column="19" TopLine="130"/>
       </Position23>
       <Position24>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="17842" Column="51" TopLine="17814"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="1247" Column="3" TopLine="1203"/>
       </Position24>
       <Position25>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="18420" Column="33" TopLine="18404"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2294" Column="29" TopLine="2257"/>
       </Position25>
       <Position26>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="17839" Column="52" TopLine="17814"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="45" Column="13" TopLine="19"/>
       </Position26>
       <Position27>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="6183" Column="7" TopLine="6158"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2294" Column="10" TopLine="2250"/>
       </Position27>
       <Position28>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="18425" Column="52" TopLine="18404"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2306" Column="11" TopLine="2264"/>
       </Position28>
       <Position29>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="18431" Column="6" TopLine="18404"/>
+        <Filename Value="osfuncwin2.pas"/>
+        <Caret Line="2283" Column="11" TopLine="2267"/>
       </Position29>
       <Position30>
-        <Filename Value="osparser.pas"/>
-        <Caret Line="17839" Column="81" TopLine="17814"/>
+        <Filename Value="winst.lpr"/>
+        <Caret Line="12" Column="39" TopLine="7"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -1224,7 +1230,7 @@
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="3">
+    <BreakPoints Count="2">
       <Item1>
         <Kind Value="bpkSource"/>
         <WatchScope Value="wpsLocal"/>
@@ -1233,19 +1239,12 @@
         <Line Value="9843"/>
       </Item1>
       <Item2>
-        <Kind Value="bpkSource"/>
-        <WatchScope Value="wpsLocal"/>
-        <WatchKind Value="wpkWrite"/>
-        <Source Value="osparser.pas"/>
-        <Line Value="7009"/>
-      </Item2>
-      <Item3>
         <Kind Value="bpkData"/>
         <WatchData Value="Expression"/>
         <WatchScope Value="wpsGlobal"/>
         <WatchKind Value="wpkWrite"/>
         <InitialEnabled Value="False"/>
-      </Item3>
+      </Item2>
     </BreakPoints>
     <Watches Count="7">
       <Item1>
